deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-federated-credential-api
  namespace: k8s-federated-credential-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8088
      protocol: TCP
      targetPort: http
  selector:
    app: k8s-federated-credential-api
