deploy/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: k8s-federated-credential-api
  namespace: k8s-federated-credential
  annotations:
    route.openshift.io/termination: edge
spec:
  ingressClassName: openshift-default
  rules:
    - host: ""
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: k8s-federated-credential-api
                port:
                  name: http
